[gd_scene load_steps=6 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 478.815, -0.462242, 0, 0, 0, 0, 477.317, 717.227, 0, 0, 0, 0, 2.35327, 718.725, 0, 0, 0, 0, -0.643372, 4.03268, 0, 0, 0, 0, -0.643372, 2.53438 )
}

[node name="main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 240.5, 450.5 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 478.815, -0.462242 )
rotation = 1.57287

[node name="HUD" parent="." instance=ExtResource( 4 )]
[connection signal="hit" from="player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
